# data-migration-quality-gate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  compose.yaml  migration.yaml  pyproject.toml
.github/workflows/: ci.yml
data_quality_gate/: __init__.py  cli.py  config.py  database.py  engine.py  exceptions.py  html_reporting.py  models.py  reporting.py  safety.py
data_quality_gate/checks/: __init__.py  allowed_values.py  base.py  checksum.py  column_comparison.py  comparison_utils.py  duplicate_keys.py  missing_keys.py  null_check.py  numeric_tolerance.py  referential_integrity.py  row_count.py  schema_match.py  unexpected_keys.py
docker/source/: 02-seed.sql
tests/: conftest.py  test_checks.py  test_cli.py  test_comparison_utils.py  test_config.py  test_database.py  test_engine.py  test_engine_run.py  test_html_reporting.py  test_integration_integer_keys.py  test_integration_milestone2.py  test_integration_milestone2b.py  test_integration_postgres.py  test_reporting.py  test_safety.py
