[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-migration-quality-gate"
version = "0.1.1"
description = "CLI quality gate for validating PostgreSQL data migrations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "PyYAML>=6.0,<7",
    "SQLAlchemy>=2.0,<3",
    "psycopg[binary]>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
data-quality-gate = "data_quality_gate.cli:main"

[tool.setuptools.packages.find]
include = ["data_quality_gate*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers --cov-fail-under=85 --basetemp=.pytest-tmp"
markers = [
    "integration: tests that require running PostgreSQL containers",
]
